Closed
Bug 486753
Opened 16 years ago
Closed 16 years ago
VMPI API names should follow camelcase notation
Categories
(Tamarin Graveyard :: Virtual Machine, defect)
Tamarin Graveyard
Virtual Machine
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: rishah, Unassigned)
Details
Attachments
(1 file)
7.51 KB,
patch
|
stejohns
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.0.8) Gecko/2009032608 Firefox/3.0.8
Build Identifier:
VMPI_Log, VMPI_DebugLog, VMPI_DebugBreak and the spy file apis for memory profile should be converted to camelcase.
Reproducible: Always
Reporter | ||
Comment 1•16 years ago
|
||
Attachment #370945 -
Flags: review?(stejohns)
Updated•16 years ago
|
Attachment #370945 -
Flags: review?(stejohns) → review+
Reporter | ||
Comment 2•16 years ago
|
||
changeset 1730 bba4f3b3ab91
Status: UNCONFIRMED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Updated•15 years ago
|
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•