Fix for bug 486753 - VMPI API names should follow camelcase notation (r=stejohns+)